update animations history & stadiums

--- a/html/history.html
+++ b/html/history.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/soccerball.png">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/history.css">
+    <!-- <link rel="stylesheet" href="../css/history.css"> -->
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Soccer is here</title>
     <script src="sounds.js" type="text/javascript"></script>
 </head>
@@ -62,7 +63,7 @@
 
     <main class="main">
         <div id="football">
-            <h2>Association football</h2>
+            <h2>Soccer history</h2>
             <p>
                 <strong>Association football</strong>, more commonly known as simply football or soccer (a shortening
                 of the word "association"), is a team sport played with a spherical ball between two teams of 11
