--- a/html/stadiums.html
+++ b/html/stadiums.html
@@ -56,6 +56,7 @@
     
     <!--  *********** Main Body HTMLs ******* -->
     <main class="main">
+        <h2>Soccer Stadiums</h2>
         <div class="rows">
             <div class="stadiums">
                 <img src="../img/01-Wembley-Stadiumw.jpg" alt="">
