updating soccer history

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/animations.css">
-    <title>Soccer is here</title>
+    <title>The soccer is here</title>
     <script src="sounds.js" type="text/javascript"></script>
 </head>
 
@@ -43,16 +43,13 @@
                 <a href="html/history.html">Soccer history</a>
             </li>
             <li>
-                <a href="#">Leagues around the world</a>
+                <a href="#">Best leagues around the world</a>
             </li>
             <li>
-                <a href="html/stadiums.html">Soccer stadiums</a>
+                <a href="html/stadiums.html">Best soccer stadiums</a>
             </li>
             <li>
                 <a href="#">Best soccer players today</a>
-            </li>
-            <li>
-                <a href="#">Soccer in the United Sates</a>
             </li>
         </ul>
     </nav>
@@ -154,6 +151,7 @@
                         <a href="#">Best soccer players today</a>
                     </li>
                 </ul>
+                
             </nav>
         </div>
 
