adding screenshots history-leagues

--- a/html/history.html
+++ b/html/history.html
@@ -64,7 +64,7 @@
                 its current form arose in England in the middle of the 19th century. But alternative versions of the
                 game existed much earlier and are a part of the football history.
             </p>
-            <h3 class="subtitle">Early history of soccer</h3>
+            <h3 class="subtitle">The early history of soccer</h3>
             <p>
                 The first known examples of a team game involving a ball, which was made out of a rock, occurred in old
                 Mesoamerican
