--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="html/history.html">Soccer history</a>
             </li>
             <li>
-                <a href="#">Best leagues around the world</a>
+                <a href="html/leagues.html">Top ten soccer leagues</a>
             </li>
             <li>
                 <a href="html/stadiums.html">Best soccer stadiums</a>
