history-video and leagues

--- a/html/stadiums.html
+++ b/html/stadiums.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/soccerball.png">
+    <link rel="icon" href="../img/soccerball.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/stadiums.css">
     <title>Soccer is here</title>
@@ -43,14 +43,12 @@
                 <a href="history.html">Soccer history</a>
             </li>
             <li>
-                <a href="#">Soccer stadiums</a>
+                <a href="stadiums.html">Soccer stadiums</a>
             </li>
             <li>
                 <a href="#">Best soccer players today</a>
             </li>
-            <li>
-                <a href="#">Soccer in the United Sates</a>
-            </li>
+
         </ul>
     </nav>
     
