fixing footer on leagues page

--- a/html/history.html
+++ b/html/history.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../img/soccerball.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/history.css">
-    <!-- <script src="../js/history.js"></script> -->
     <title>The soccer is here</title>
 </head>
 
@@ -39,7 +38,7 @@
                 <a href="../index.html">Home page</a>
             </li>
             <li>
-                <a href="#">Leagues around the world</a>
+                <a href="history.html">Leagues around the world</a>
             </li>
             <li>
                 <a href="stadiums.html">Soccer stadiums</a>
@@ -129,8 +128,8 @@
                     Your webrowser is not ompatible with this format video..
                 </video>
                 <div class="video-btns">
-                    <button onclick="playPause()">&#9658/||</button>
-                    <button onclick="stop()">&#9726</button>
+                    <button onclick="playPause()">&#9658;/||</button>
+                    <button onclick="stop()">&#9726;</button>
                     <button onclick="skip(-10)">&lt;&lt;</button>
                     <button onclick="skip(10)">&gt;&gt;</button>
                 </div>
