new home page and updating

--- a/html/history.html
+++ b/html/history.html
@@ -35,19 +35,16 @@
     <nav class="main-menu">
         <ul>
             <li>
-                <a href="../index.html">Home page</a>
+                <a href="association.html">Association football</a>
             </li>
             <li>
-                <a href="history.html">Leagues around the world</a>
+                <a href="leagues.html">Top ten soccer leagues</a>
             </li>
             <li>
-                <a href="stadiums.html">Soccer stadiums</a>
+                <a href="stadiums.html">Best soccer stadiums</a>
             </li>
             <li>
                 <a href="#">Best soccer players today</a>
-            </li>
-            <li>
-                <a href="#">Soccer in the United Sates</a>
             </li>
         </ul>
     </nav>
