--- a/html/leagues.html
+++ b/html/leagues.html
@@ -35,7 +35,7 @@
     <nav class="main-menu">
         <ul>
             <li>
-                <a href="../index.html">Home page</a>
+                <a href="association.html">Association football</a>
             </li>
 
             <li>
