--- a/html/stadiums.html
+++ b/html/stadiums.html
@@ -37,13 +37,13 @@
     <nav class="main-menu">
         <ul>
             <li>
-                <a href="../index.html">Home page</a>
+                <a href="association.html">Association football</a>
             </li>
             <li>
                 <a href="history.html">Soccer history</a>
             </li>
             <li>
-                <a href="stadiums.html">Soccer stadiums</a>
+                <a href="leagues.html">Top ten soccer leagues</a>
             </li>
             <li>
                 <a href="#">Best soccer players today</a>
