new home web responsive

--- a/html/association.html
+++ b/html/association.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="header-img">
-            <img src="../img/soccerball.png" alt="">
+            <img src="../img/soccerball.png" alt="Soccer ball">
         </div>
         <div class="header-h1">
             <h1>The soccer is here</h1>
