--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/soccerball.png">
+    <link rel="icon" href="img/soccerball.png">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/animations.css">
     <title>The soccer is here</title>
 </head>
 
 <body>
     <header>
-        <a href="#">Contact</a>
+        <a href="html/association.html">Contact</a>
         <a href="#">About us</a>
     </header>
 
-    <aside class="lateral">
-        <h1>The soccer is here</h1>
-        <p>
-            <strong>The soccer is here</strong>, is a Front-End <a href="https://codelouisville.org/" target="_blank">CodeLouisville</a>
-            project, where each student needs to reinforce what we have learned and show off our skills. These projects
-            will be part of our go-to tool to show off to potential employers and demonstrate you know what you’re
-            talking about.
-        </p>
-
-    </aside>
-
+    <div class="main">
+        <aside class="lateral">
+            <h1>The soccer is here</h1>
+            <p>
+                <strong>The soccer is here</strong>, is a Front-End <a href="https://codelouisville.org/" target="_blank">CodeLouisville</a>
+                project, where each student needs to reinforce what we have learned and show off our skills. These projects
+                will be part of our go-to tool to show off to potential employers and demonstrate you know what you’re
+                talking about.
+            </p>
+        </aside>
+        
+        <div class="ball-img">
+            <img src="img/soccerball.png" alt="Soccer ball">
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
