--- a/html/association.html
+++ b/html/association.html
@@ -49,7 +49,7 @@
                 <a href="stadiums.html">Best soccer stadiums</a>
             </li>
             <li>
-                <a href="#">Best soccer players today</a>
+                <a href="players.html">Best soccer players today</a>
             </li>
         </ul>
     </nav>
