--- a/html/history.html
+++ b/html/history.html
@@ -44,7 +44,7 @@
                 <a href="stadiums.html">Best soccer stadiums</a>
             </li>
             <li>
-                <a href="#">Best soccer players today</a>
+                <a href="players.html">Best soccer players today</a>
             </li>
         </ul>
     </nav>
@@ -130,7 +130,7 @@
                     <button onclick="skip(-10)">&lt;&lt;</button>
                     <button onclick="skip(10)">&gt;&gt;</button>
                 </div>
-                <script src="../js/history.js"></script>
+                <script src="../js/script.js"></script>
                 
             </div>
             <p>
