--- a/html/leagues.html
+++ b/html/leagues.html
@@ -39,13 +39,13 @@
             </li>
 
             <li>
-                <a href="../html/history.html">Soccer history</a>
+                <a href="history.html">Soccer history</a>
             </li>
             <li>
-                <a href="../html/stadiums.html">Best soccer stadiums</a>
+                <a href="stadiums.html">Best soccer stadiums</a>
             </li>
             <li>
-                <a href="#">Best soccer players today</a>
+                <a href="players.html">Best soccer players today</a>
             </li>
         </ul>
     </nav>
