--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <header>
         <a href="html/association.html">Contact</a>
         <a href="#">About us</a>
@@ -29,7 +30,7 @@
         </aside>
         
         <div class="ball-img">
-            <img src="img/soccerball.png" alt="Soccer ball">
+            <img id="image" src="img/soccerball-with-no-text.png" alt="Soccer ball">
         </div>
     </div>
 
@@ -38,10 +39,7 @@
         <p class="footerline1"><a href="#">Contact</a> | <a href="#">About us</a> </p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </footer>
-
-
-
-
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
