Home Page, Stadiums and History

--- a/html/history.html
+++ b/html/history.html
@@ -122,7 +122,7 @@
             <div class="video-container">
                 <video id="video1" width="100%">
                     <source src="../css/video/soccerHistory.mp4">
-                    Your webrowser is not ompatible with this format video..
+                    Your webrowser is not compatible with this format video..
                 </video>
                 <div class="video-btns">
                     <button onclick="playPause()">&#9658;/||</button>
