--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
         </aside>
         
         <div class="ball-img">
-            <img id="image" src="img/soccerball-with-no-text.png" alt="Soccer ball">
+            <img id="image" src="img/soccerball.png" alt="Soccer ball">
         </div>
     </div>
-
+    <!-- Start -->
+    <div class="start">
+        <a href="html/association.html">START</a>
+    </div>
     <!-- footer -->
     <footer>
         <p class="footerline1"><a href="#">Contact</a> | <a href="#">About us</a> </p>
