index and  players web responsive changes

--- a/html/association.html
+++ b/html/association.html
@@ -28,7 +28,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="../index.html">Contact</a>
                     </li>
                     <li>
                         <a href="#">About us</a>
