--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>The soccer is here</h1>
             <p>
                 <strong>The soccer is here</strong>, is a Front-End <a href="https://codelouisville.org/" target="_blank">CodeLouisville</a>
-                project, where each student needs to reinforce what we have learned and show off our skills. These projects
+                project, where each student reinforces what we have learned and show off our skills. These projects
                 will be part of our go-to tool to show off to potential employers and demonstrate you know what you’re
                 talking about.
             </p>
