Creating Contac Us page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
+    <audio autoplay="autoplay">
+        <source src="css/audio/Martin Tyler-Best Moments.mp3" />
+    </audio>
 
     <header>
-        <a href="html/association.html">Contact</a>
+        <a href="html/contactus.html">Contact</a>
         <a href="#">About us</a>
     </header>
 
@@ -39,7 +42,7 @@
     </div>
     <!-- footer -->
     <footer>
-        <p class="footerline1"><a href="#">Contact</a> | <a href="#">About us</a> </p>
+        <p class="footerline1"><a href="html/contactus.html">Contact</a> | <a href="#">About us</a> </p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </footer>
     <script src="../js/script.js"></script>
