Adjusting Web responsive pages

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -13,16 +13,20 @@
 
 <body>
     <header>
-        <div class="img-h1">
+        <div class="header-img">
             <img src="../img/soccerball.png" alt="">
+        </div>
+        <div class="header-h1">
             <h1>The soccer is here</h1>
         </div>
     </header>
 
     <div class="banner">
-        <img src="../img/soccer-banner.jpg" alt="">
+        <img src="../img/soccer-banner.jpg" alt="Soccer banner">
         <div class="banner-body">
-            <h2>Contact Us</h2>
+            <div class="banner-h2">
+                <h2>Contact Us</h2>
+            </div>
             <p>
                 We welcome the opportunity to learn a little more about the passionate world of soccer. Please fill out
                 the form below and we’ll be in touch with you right away.
