--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="icon" href="img/soccerball.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/animations.css">
+    <script src="js/index.js"></script>
     <title>The soccer is here</title>
 </head>
 
 <body>
+    
     <audio autoplay="autoplay">
         <source src="css/audio/Martin Tyler-Best Moments.mp3" />
     </audio>
@@ -32,15 +34,15 @@
             </p>
         </aside>
         
-        <div class="ball-img">
-            <img id="image" src="img/soccerball.png" alt="Soccer ball">
+        <div  class="ball-img">
+            <img id="image" src="img/soccerball-with-no-text.png" alt="Soccer ball">
         </div>
     </div>
-    <!-- Start -->
+
     <div class="start">
         <a href="html/association.html">START</a>
     </div>
-    <!-- footer -->
+
     <footer>
         <p class="footerline1"><a href="html/contactus.html">Contact</a> | <a href="#">About us</a> </p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
