updating index page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="footerline1"><a href="html/contactus.html">Contact</a> | <a href="#">About us</a> </p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </footer>
-    <script src="../js/script.js"></script>
+    <!-- <script src="../js/script.js"></script> -->
 </body>
 
 </html>
