moving  audio & video folders to the root

--- a/html/history.html
+++ b/html/history.html
@@ -118,7 +118,7 @@
             </p>
             <div class="video-container">
                 <video id="video1" width="100%">
-                    <source src="../css/video/soccerHistory.mp4">
+                    <source src="../video/soccerHistory.mp4">
                     Your webrowser is not compatible with this format video..
                 </video>
                 <div class="video-btns">
