--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <audio autoplay="autoplay">
-        <source src="css/audio/Martin Tyler-Best Moments.mp3" />
+        <source src="audio/Martin Tyler-Best Moments.mp3" />
     </audio>
 
     <header>
@@ -47,7 +47,7 @@
         <p class="footerline1"><a href="html/contactus.html">Contact</a> | <a href="#">About us</a> </p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </footer>
-    <!-- <script src="../js/script.js"></script> -->
+
 </body>
 
 </html>
