updating width of video container V3

--- a/html/history.html
+++ b/html/history.html
@@ -95,7 +95,7 @@
                 to the British island (Britannica). It is, however, uncertain in which degree the British people were
                 influenced by this variety and in which degree they had developed their own variants.
             </p>
-            <h3 class="subtitle">The game of football takes its form</h3>
+            <h3 class="subtitle">The soccer takes its form</h3>
             <p>
                 The most admitted story tells that the game was developed in England in the 12th century. In this
                 century, games that resembled football were played on meadows and roads in England. Besides from kicks,
@@ -117,7 +117,7 @@
                 concerning the size of the ball, the number of players and the length of a match.
             </p>
             <div class="video-container">
-                <video id="video1" width="100%">
+                <video id="video1">
                     <source src="../video/soccerHistory.mp4">
                     Your webrowser is not compatible with this format video..
                 </video>
