updating links & readme file

--- a/html/players.html
+++ b/html/players.html
@@ -25,10 +25,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contactus.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="../index.html">Home Page</a>
                     </li>
                 </ul>
             </nav>
@@ -91,16 +91,16 @@
             <nav class="footer-menu-nav">
                 <ul>
                     <li>
-                        <a href="association.html">Assocition football</a>
+                        <a href="association.html">Association football</a>
                     </li>
                     <li>
                         <a href="history.html">Soccer history</a>
                     </li>
                     <li>
-                        <a href="leagues.html">Leagues around the world</a>
+                        <a href="leagues.html">Top ten soccer leagues</a>
                     </li>
                     <li>
-                        <a href="stadiums.html">Soccer stadiums</a>
+                        <a href="stadiums.html">Best soccer stadiums</a>
                     </li>
 
                 </ul>
@@ -142,7 +142,7 @@
         </div>
     </footer>
     <div class="copyline">
-        <p class="footerline1"><a href="#">Contact</a> | <a href="#">About us</a> </p>
+        <p class="footerline1"><a href="contactus.html">Contact Us</a> | <a href="../index.html">Home Page</a> </p>
         <p class="footerline2">Soccer is here &copy;Copyright 2021</p>
     </div>
 </body>
