--- a/html/stadiums.html
+++ b/html/stadiums.html
@@ -27,10 +27,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contactus.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="../index.html">Home Page</a>
                     </li>
                 </ul>
             </nav>
@@ -177,19 +177,16 @@
             <nav class="footer-menu-nav">
                 <ul>
                     <li>
-                        <a href="#">Soccer history</a>
+                        <a href="association.html">Association football</a>
                     </li>
                     <li>
-                        <a href="#">Leagues around the world</a>
+                        <a href="history.html">Soccer history</a>
                     </li>
                     <li>
-                        <a href="#">Soccer stadiums</a>
+                        <a href="leagues.html">Top ten soccer leagues</a>
                     </li>
                     <li>
-                        <a href="#">Best soccer players today</a>
-                    </li>
-                    <li>
-                        <a href="#">Soccer in the United Sates</a>
+                        <a href="players.html">Best soccer players today</a>
                     </li>
                 </ul>
             </nav>
@@ -230,7 +227,7 @@
         </div>
     </footer>
     <div class="copyline">
-        <p class="footerline1"><a href="#">Contact</a> | <a href="#">About us</a> </p>
+        <p class="footerline1"><a href="contactus.html">Contact Us</a> | <a href="../index.html">Home Page</a> </p>
         <p class="footerline2">Soccer is here &copy;Copyright 2021</p>
     </div>
 </body>
