--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </audio>
 
     <header>
-        <a href="html/contactus.html">Contact</a>
-        <a href="#">About us</a>
+        <a href="html/contactus.html">Contact Us</a>
     </header>
 
     <div class="main">
@@ -29,7 +28,7 @@
             <p>
                 <strong>The soccer is here</strong>, is a Front-End <a href="https://codelouisville.org/" target="_blank">CodeLouisville</a>
                 project, where each student reinforces what we have learned and show off our skills. These projects
-                will be part of our go-to tool to show off to potential employers and demonstrate you know what you’re
+                will be part of our go-to tool to show off to potential employers and demonstrate we know what we’re
                 talking about.
             </p>
         </aside>
@@ -44,7 +43,7 @@
     </div>
 
     <footer>
-        <p class="footerline1"><a href="html/contactus.html">Contact</a> | <a href="#">About us</a> </p>
+        <p class="footerline1"><a href="html/contactus.html">Contact Us</a></p>
         <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </footer>
 
