updating links on all footer pages and readme

--- a/html/leagues.html
+++ b/html/leagues.html
@@ -359,7 +359,7 @@
 
     <div class="copyline">
         <p class="footerline1"><a href="contactus.html">Contact Us</a> | <a href="../index.html">Home Page</a> </p>
-        <p class="footerline2">Soccer is here &copy;Copyright 2021</p>
+        <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </div>
     
 </body>
