--- a/html/contactus.html
+++ b/html/contactus.html
@@ -62,7 +62,7 @@
 
     <div class="copyline">
         <p class="footerline1"><a href="../index.html">Home Page</a> </p>
-        <p class="footerline2">Soccer is here &copy;Copyright 2021</p>
+        <p class="footerline2">The soccer is here &copy;Copyright 2021</p>
     </div>
 </body>
 
