updating js files, home page, leagues styles

--- a/html/history.html
+++ b/html/history.html
@@ -127,7 +127,7 @@
                     <button onclick="skip(-10)">&lt;&lt;</button>
                     <button onclick="skip(10)">&gt;&gt;</button>
                 </div>
-                <script src="../js/script.js"></script>
+                <script src="../js/history.js"></script>
                 
             </div>
             <p>
