--- a/html/players.html
+++ b/html/players.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/players.css">
     <title>Soccer is here</title>
-
-    <script src="../js/script.js"></script>
+    <script src="../js/players.js"></script>
 </head>
 
 <body>
