Final code review and readme file

--- a/html/history.html
+++ b/html/history.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="header-img">
-            <img src="../img/soccerball.png" alt="">
+            <img src="../img/soccerball.png" alt="Soccer ball">
         </div>
         <div class="header-h1">
             <h1>The soccer is here</h1>
@@ -204,7 +204,7 @@
                 took place in Inverness in 1888.
             </p>
             <h3 class="subtitle">The first competitions</h3>
-            <img src="../img/history/first-competition.jpg" alt="first competition" class="first-competition">
+            <img src="../img/history/first-competition.jpg" alt="First competition" class="first-competition">
             <p>
                 Other milestones were now to follow. Football Association Challenge Cup (FA Cup) became the first
                 important competition when it was run in 1871. The following year a match between two national teams was
