--- a/html/players.html
+++ b/html/players.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="header-img">
-            <img src="../img/soccerball.png" alt="">
+            <img src="../img/soccerball.png" alt="Soccer ball">
         </div>
         <div class="header-h1">
             <h1>The soccer is here</h1>
@@ -66,7 +66,7 @@
             </div>
             <div class="box2">
                 <h3 id="player-name">Lionel Messi</h3>
-                <img src="../img/players/club1.jpg" alt="" id="img-right">
+                <img src="../img/players/club1.jpg" alt="Soccer Club" id="img-right">
                 <p id="descrip">
                     La Pulga Atómica (the Atomic Flea) has remained at the top of this list for over a decade now, and
                     at 33, he’s still going strong. In fact, sensational stats and seasons have become second nature for
