--- a/html/stadiums.html
+++ b/html/stadiums.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/stadiums.css">
     <title>Soccer is here</title>
-    <script src="sounds.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -18,7 +17,7 @@
    
     <header class="main-header">
         <div class="header-img">
-            <img src="../img/soccerball.png" alt="">
+            <img src="../img/soccerball.png" alt="Soccer ball">
         </div>
         <div class="header-h1">
             <h1>The soccer is here</h1>
@@ -59,7 +58,7 @@
         <h2>Soccer Stadiums</h2>
         <div class="rows">
             <div class="stadiums">
-                <img src="../img/01-Wembley-Stadiumw.jpg" alt="">
+                <img src="../img/01-Wembley-Stadiumw.jpg" alt="Wembley Stadium">
                 <div class="stadiums-descrip">
                     <h3>Wembley Stadium</h3>
                     <p>
@@ -71,7 +70,7 @@
                 </div>
             </div>
             <div class="stadiums">
-                <img src="../img/02-campnou.jpg" alt="" class="campnou">
+                <img src="../img/02-campnou.jpg" alt="Camp Nou" class="campnou">
                 <div class="stadiums-descrip">
                     <h3>Camp Nou (Barcelona, Spain)</h3>
                     <p>
@@ -86,7 +85,7 @@
 
         <div class="rows">
             <div class="stadiums">
-                <img src="../img/03-santiagobernabeu.jpg" alt="">
+                <img src="../img/03-santiagobernabeu.jpg" alt="Santiago Bernabeu">
                 <div class="stadiums-descrip">
                     <h3>Santiago Bernabeu (Madrid)</h3>
                     <p>
@@ -100,7 +99,7 @@
                 </div>
             </div>
             <div class="stadiums">
-                <img src="../img/04-old-trafford.jpg" alt="">
+                <img src="../img/04-old-trafford.jpg" alt="Old Trafford">
                 <div class="stadiums-descrip">
                     <h3>Old Trafford (Manchester, England)</h3>
                     <p>
@@ -115,7 +114,7 @@
 
         <div class="rows">
             <div class="stadiums">
-                <img src="../img/05-maracana.jpg" alt="">
+                <img src="../img/05-maracana.jpg" alt="Maracana">
                 <div class="stadiums-descrip">
                     <h3>The Maracana (Rio de Janeiro)</h3>
                     <p>
@@ -128,7 +127,7 @@
                 </div>
             </div>
             <div class="stadiums">
-                <img src="../img/06-Allianz_Arena.jpg" alt="">
+                <img src="../img/06-Allianz_Arena.jpg" alt="Allianz Arena">
                 <div class="stadiums-descrip">
                     <h3>Allianz Arena (Munich)</h3>
                     <p>
@@ -144,7 +143,7 @@
 
         <div class="rows">
             <div class="stadiums">
-                <img src="../img/07--azteca.jpg" alt="">
+                <img src="../img/07--azteca.jpg" alt="Azteca">
                 <div class="stadiums-descrip">
                     <h3>Estadio Azteca (Mexico City)</h3>
                     <p>
@@ -156,7 +155,7 @@
                 </div>
             </div>
             <div class="stadiums">
-                <img src="../img/08-juventus.jpg" alt="">
+                <img src="../img/08-juventus.jpg" alt="Juventus">
                 <div class="stadiums-descrip">
                     <h3>Juventus Stadium (Turin, Italy)</h3>
                     <p>
