--- a/html/contactus.html
+++ b/html/contactus.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="header-img">
-            <img src="../img/soccerball.png" alt="">
+            <img src="../img/soccerball.png" alt="Soccer ball">
         </div>
         <div class="header-h1">
             <h1>The soccer is here</h1>
